--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
   "dependencies": {
     "@react-native-firebase/app": "^12.7.1",
     "@react-native-firebase/auth": "^12.7.3",
+    "@react-native-firebase/database": "^12.8.0",
     "@react-native-picker/picker": "^1.16.6",
+    "@react-navigation/drawer": "^6.1.4",
+    "@react-navigation/material-top-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "moment": "^2.29.1",
+    "native-base": "^3.1.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
-    "react-native-safe-area-context": "^3.3.0",
+    "react-native-pager-view": "^5.4.4",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.5.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^8.1.0",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
